<resources>
    <string name="app_name">Ponderizer</string>
    <string name="action_settings">Settings</string>

    <!-- MAIN ACTIVITY -->
    <!-- Scripture context menu strings-->
    <string name="view_scripture">View Scripture</string>
    <string name="memorize_scripture">Memorize</string>
    <string name="view_notes">View Study Journal</string>
    <!-- ViewPager default text -->
    <string name="tap_to_add_scripture">Tap to add a scripture</string>
    <string name="complete_a_scripture">Mark a scripture as "Completed" to put it here.</string>
    <!-- feedback dialog -->
    <string name="popup_like_this_app">Enjoying this app?</string>
    <string name="popup_contribute">Contribute</string>
    <string name="feedback_dialog_message">Want to send feedback? Tap \"OK\" to write me an email.</string>
    <string name="feedback_dialog_cancel">Never mind</string>
    <string name="feedback_dialog_confirm">OK</string>

    <!-- INSTRUCTIONS FOR ADDING ACTIVITY -->
    <string name="install_gospel_library">Install Gopsel Library app from Google Play</string>
    <string name="open_gospel_library">Open Gospel Library</string>

    <!-- ADD SCRIPTURE ACTIVITY -->
    <string name="scripture_title_hint">Title / Scripture Reference</string>
    <string name="scripture_text_hint">Verses of Scripture</string>

    <!-- SCRIPTURE VIEW ACTIVITY -->
    <string name="tab_title_scripture">Scripture</string>
    <string name="tab_title_notes">Study Journal</string>
    <string name="menu_mark_in_progress">Mark as \"In Progress\"</string>
    <string name="menu_mark_complete">Mark as \"Completed\"</string>
    <string name="dialog_confirm_delete_scripture">
        Are you sure you want to delete this scripture and its study journals from your list?
    </string>
    <string name="tap_to_add_note">Tap to add a journal entry</string>

    <!-- ADD NOTE ACTIVITY -->
    <string name="title_activity_add_note">Add journal entry</string>
    <string name="text_hint_add_note">Type your study journal entry here</string>
    <string name="prompt_delete_note">Are you sure you want to delete this journal entry?</string>
    <string name="prompt_discard_changes">Are you sure you want to discard your changes?</string>
    <string name="dialog_edit_note_title">Edit Journal Entry</string>
    <string name="prompt_confirm_edit_note">Are you sure you want to edit this journal entry?</string>
    <string name="toast_note_saved">Journal entry saved</string>
    <string name="toast_note_deleted">Journal entry deleted</string>

    <!-- MEMORIZE ACTIVITY -->
    <string name="title_activity_memorize">Memorize</string>

    <!-- MEMORIZATION TEST ACTIVITY -->
    <string name="title_activity_memorize_test">Memorization Test</string>
    <string name="test_instructions_fmt">
        Please enter the text of %s from memory, by choosing the correct words in order.
    </string>
    <!-- Results dialog text -->
    <string name="results_title_perfect">Great Job!</string>
    <string name="results_msg_perfect">You recited the scripture perfectly!</string>
    <string name="results_title">Your Score</string>
    <string name="results_msg_score_fmt">You recited %1$d%% of the scripture correctly.</string>
    <string name="results_mark_complete">Would you like to mark this scripture as \"Complete\"?</string>
    <string name="results_share_text_fmt">I memorized %1$s with %2$d%% accuracy using Ponderizer. Give it a try!</string>
    <string name="results_share_subject_fmt">I memorized %1$s with %2$d%% accuracy using Ponderizer.</string>
    <string name="results_keep_trying">Keep trying!</string>

    <!-- EXPORT ACTIVITY -->
    <string name="title_activity_export">Export / Share Scripture</string>
    <string name="no_notes">(There are no notes for this scripture)</string>

    <!-- CONFIGURE WIDGET ACTIVITY -->
    <string name="configure">Choose the scripture you wish to display:</string>
    <string name="widget_body_description">Scripture Text</string>

    <!-- SCRIPTURE MASTERY DIALOG -->
    <string name="import_sm">Import</string>
    <string name="sm_dialog_title">Import Scripture Mastery</string>
    <string name="remove_sm">Remove</string>
    <string name="sm_remove_prompt">This will remove %d scriptures from your list. Continue?</string>

    <!-- SETTINGS ACTIVITY -->
    <string-array name="weekdays" >
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="allow_notifs">Notifications</string>

    <!-- ABOUT PAGE -->
    <string name="about">About</string>
    <string name="about_text_intro">
        Hi! I\'m Dan Mercer, the author of Ponderizer. I hope you\'re
        enjoying this app. If you are, please consider contributing in one of the ways below.
    </string>
    <string name="about_text_body">
        <![CDATA[
        <a href="https://play.google.com/store/apps/details?id=net.danmercer.ponderizer">Rate the
        app!</a> Please tell the world what you think of Ponderizer by rating it on the Play Store.
        <br/><br/>
        Share Ponderizer with your friends! Encourage them to study and ponderize like you do. :)
        <br/><br/>
        <a href="https://paypal.me/danmercer">Donate</a>. As you know, Ponderizer is completely
        free. So donations are a great way to assist me with future development and other things.
        Every little bit counts!
        <br/><br/>
        <a href="https://github.com/drmercer/ponderizer">Contribute</a> to the source code.
        Fork my project on GitHub, and you can help write the next greatest feature!
        ]]>
    </string>
    <string name="about_text_share_snippet">Share Ponderizer</string>

    <!-- generic text -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="choose_share">Share with&#8230;</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

</resources>
