<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="101"
        android:title="@string/help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="102"
        android:title="@string/send_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="103"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>